gangsta.css
/* ... */
#end_score_recap table th div {
  display: inline-block;
}
#end_score_recap table thead {
  background-color: #f3e5a9;
}
#end_score_recap table thead th {
  padding: 0 5px;
}
#end_score_recap table td {
  word-wrap: anywhere;
  font-size: 20px;
  padding: 5px 8px;
  text-align: center;
  vertical-align: middle;
}
#end_score_recap table tbody tr {
  border-top: 1px solid rgba(0, 0, 0, 0.2);
}
#end_score_recap table .final_score {
  color: black;
  background-color:  rgb(243,156,18);
  font-weight: bold;
}
.row_recap_heists td{
    /*
    display: flex;
    flex-direction: row;
    flex-wrap: wrap; 
    */
}
.row_recap_heists td div{
    flex-grow: 1;
}
.row_recap_heists td button{
    width: 1em;
    font-size: large;
    background-color: inherit;
    color: inherit;
    cursor: pointer;
}
#end_score_recap .custom_icon{
    display: inline-block;
    vertical-align: middle;
}
body[data-resources_variant="1"] .row_recap_resources{
    display: none;
}
body[data-clan_variant="true"] .row_recap_mostGangsters{
    display: none;
}
body[data-clan_variant="false"] .row_recap_clans{
    display: none;
}
#end_score_recap table div.counter_empty  {
  opacity: 0.1;
}

.tableWindowRecap_title{
    text-align: center;
    font-size: 1.2em;
}
.tableWindowRecap_header{
    text-align: center;
    font-size: 1.1em;
}
.tableWindowRecap{
    margin-left: auto;
    margin-right: auto;
}
table.tableWindowRecap th {
    font-size: 1.2em;
    border-bottom: 2px solid #6678b1;
}
table.tableWindowRecap td {
    font-size: 1.0em;
    border-bottom: 1px solid #ccc;
}
table.tableWindowRecap th,
table.tableWindowRecap td {
    text-align: center;
    vertical-align: middle;
}

/* -------------------- MOBILE -------------------- */

@media only screen and (max-width: 1440px) {
    #avdecks {
        grid-template-columns: 8fr 2fr;
    }
}

@media only screen and (max-width: 1230px) {
    #avdecks {
        display: block;
        margin: 30px 0;
    }
    #snitches {
        justify-content: center;
    }
}

@media only screen and (max-width: 996px) {
    .skill-container {
        flex-direction: column;
    }
    .board-skills .skill {
        margin-bottom: 4px;
        width: 28px;
        height: 28px;
        background-image: url('img/sprite_rewards.png');
        background-size: 280px 168px;
        margin-right: 4px;
    }
    /*.board-family {
        display: flex;
        flex-wrap: wrap;
        border-top: 1px solid rgba(0, 0, 0, 0.2);
        margin-top: 8px;
        padding-top: 8px;
    }*/
    .family-container {
        flex-direction: column;
    }
    .board-family .family {
        width: 28px;
        height: 28px;
        display: inline-block;
        background-image: url('img/sprite_rewards.png');
        background-size: 280px 168px;
        margin-right: 4px;
    }
    #avdecks .cardlist_wrapper {
        margin-left: 90px !important;
    }
    #heistsdeck.deck {
        width: 55px !important;
        height: 77px !important;
    }
    .genesis .deck {
        background-size: 495px 308px !important;
    }
    .gangwar .deck {
        background-size: 495px 385px !important;
    }    
    .domination .deck {
        background-size: 495px 308px !important;
    }
    #gangstersdeck.deck {
        width: 55px !important;
        height: 77px !important;
        background-size: 440px 462px !important;
        background-position: -55px 0px !important;
    }
    .current_player .whiteblock, .opposing_player .whiteblock {
        background: rgb(199 186 176 / 50%) !important;
    }
}

@media only screen and (max-width: 768px) {
    .board-skills .skill {
        margin-bottom: 4px;
        width: 28px;
        height: 28px;
        background-image: url(img/sprite_rewards.png);
        background-size: 280px 168px;
        margin-right: 2px;
    }
    .board-family .family {
        margin-bottom: 4px;
        width: 28px;
        height: 28px;
        background-image: url(img/sprite_rewards.png);
        background-size: 280px 168px;
        margin-right: 4px;
    }
}

@media only screen and (max-width: 600px) {
    
}

/* -------------------- MOBILE -------------------- */

/* Notif logs */
.log .custom_icon{
    margin-left: 0.3em;
    margin-right: 0.1em;
    vertical-align: middle;
}

